<resources>
    <string name="app_name">Indian States and UTs</string>
    <string-array name="india_states">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="states_area">
        <item>Rajasthan</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Uttar Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Gujarat</item>
        <item>Karnataka</item>
        <item>Andhra Pradesh</item>
        <item>Odisha</item>
        <item>Chhattisgarh</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Bihar</item>
        <item>West Bengal</item>
        <item>Arunachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Assam</item>
        <item>Himachal Pradesh</item>
        <item>Uttarakhand</item>
        <item>Punjab</item>
        <item>Haryana</item>
        <item>Kerala</item>
        <item>Meghalaya</item>
        <item>Manipur</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Tripura</item>
        <item>Sikkim</item>
        <item>Goa</item>

    </string-array>
    <string-array name="states_population">
        <item>Uttar Pradesh</item>
        <item>Maharashtra</item>
        <item>Bihar</item>
        <item>West Bengal</item>
        <item>Madhya Pradesh</item>
        <item>Tamil Nadu</item>
        <item>Rajasthan</item>
        <item>Karnataka</item>
        <item>Gujarat</item>
        <item>Andhra Pradesh</item>
        <item>Odisha</item>
        <item>Telangana</item>
        <item>Kerela</item>
        <item>Jharkhand</item>
        <item>Assam</item>
        <item>Punjab</item>
        <item>Chattisgarh</item>
        <item>Haryana</item>
        <item>Jammu and Kashmir</item>
        <item>Uttarakhand</item>
        <item>Himachal Pradesh</item>
        <item>Tripura</item>
        <item>Meghalaya</item>
        <item>Manipur</item>
        <item>Nagaland</item>
        <item>Goa</item>
        <item>Arunanchal Pradesh</item>
        <item>Mizoram</item>
        <item>Sikkim</item>
    </string-array>
    <string-array name="states_literacy_rate">
        <item>Kerala</item>
        <item>Mizoram</item>
        <item>Goa</item>
        <item>Tripura</item>
        <item>Himachal Pradesh</item>
        <item>Maharashtra</item>
        <item>Sikkim</item>
        <item>Nagaland</item>
        <item>Tamil Nadu</item>
        <item>Manipur</item>
        <item>Gujarat</item>
        <item>Uttarakhand</item>
        <item>Haryana</item>
        <item>West Bengal</item>
        <item>Punjab</item>
        <item>Karnataka</item>
        <item>Meghalaya</item>
        <item>Odisha</item>
        <item>Assam</item>
        <item>Chhattisgarh</item>
        <item>Madhya Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Uttar Pradesh</item>
        <item>Jharkhand</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Rajasthan</item>
        <item>Bihar</item>
        <item>Telangana</item>
    </string-array>
    <string-array name="states_sex_ratio">
        <item>Kerala</item>
        <item>Tamil Nadu</item>
        <item>Andhra Pradesh</item>
        <item>Chhattisgarh</item>
        <item>Meghalaya</item>
        <item>Telangana</item>
        <item>Manipur</item>
        <item>Odisha</item>
        <item>Mizoram</item>
        <item>Goa</item>
        <item>Karnataka</item>
        <item>Himachal Pradesh</item>
        <item>Uttarakhand</item>
        <item>Tripura</item>
        <item>Assam</item>
        <item>West Bengal</item>
        <item>Jharkhand</item>
        <item>Arunachal Pradesh</item>
        <item>Madhya Pradesh</item>
        <item>Nagaland</item>
        <item>Maharashtra</item>
        <item>Rajasthan</item>
        <item>Gujarat</item>
        <item>Bihar</item>
        <item>Uttar Pradesh</item>
        <item>Punjab</item>
        <item>Sikkim</item>
        <item>Jammu and Kashmir</item>
        <item>Haryana</item>
    </string-array>
    <string-array name="union_territories">
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Lakshadweep</item>
        <item>National Capital Territory of Delhi</item>
        <item>Puducherry</item>
    </string-array>
    <string-array name="ut_area">
        <item>Andaman and Nicobar Island</item>
        <item>National Capital Territory of Delhi</item>
        <item>Puducherry</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Chandigarh</item>
        <item>Daman and Diu</item>
        <item>Lakshadweep</item>
    </string-array>
    <string-array name="ut_population">
        <item>National Capital Territory of Delhi</item>
        <item>Puducherry</item>
        <item>Chandigarh</item>
        <item>Andaman and Nicobar Island</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Lakshadweep</item>
    </string-array>
    <string-array name="ut_literacy_rate">
        <item>Lakshadweep</item>
        <item>Daman and Diu</item>
        <item>Puducherry</item>
        <item>Chandigarh</item>
        <item>National Capital Territory of Delhi</item>
        <item>Andaman and Nicobar Island</item>
        <item>Dadra and Nagar Haveli</item>
    </string-array>
    <string-array name="ut_sex_ratio">
        <item>Puducherry</item>
        <item>Lakshadweep</item>
        <item>Andaman and Nicobar Islands</item>
        <item>National Capital Territory of Delhi</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
    </string-array>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="youTubeErrorMessage">There was a error initialising youtube app</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="capital">Capital</string>
    <string name="colon">:</string>
    <string name="population">Population</string>
    <string name="total_area_in_km_sq">Total Area(in km.sq.)</string>
    <string name="literacy_rate">Literacy Rate(%)</string>
    <string name="male_literacy_rate">Male Literacy Rate(%)</string>
    <string name="female_literacy_rate">Female Literacy Rate(%)</string>
    <string name="sex_ratio">Sex Ratio</string>
    <string name="history">History:</string>
    <string name="regional_dances">Regional Dances:</string>
    <string name="languages_spoken">Languages Spoken:</string>
    <string name="places_to_visit">Places to visit:</string>
    <string name="recommended_video">Recommended Video:</string>
    <string name="welcome_to">Welcome to</string>
    <string name="the_d_zone">THE D-ZONE</string>
    <string name="this_is_an_app_on_indian_states">This is an app on INDIAN STATES</string>
    <string name="about_us">About us</string>
    <string name="join_us">Join Us</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="register_to_explore_indian_states">REGISTER TO EXPLORE INDIAN STATES</string>
    <string name="click_here_to_reset_password">Change your password</string>
    <string name="log_out">Log Out</string>
    <string name="contact">contact</string>
    <string name="username">USERNAME</string>
    <string name="no_bookmarks_yet">No Bookmarks yet !</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="exit">Exit</string>
    <string name="sort_by">Sort By:</string>
    <string name="logo_main">LOGO MAIN</string>
    <string name="indian_states_and_union_territories">Indian States and Union Territories</string>
    <string name="view_website">View Website</string>
    <string name="quiz">Quiz</string>
    <string name="img_sex_ratio">img_sex_ratio</string>
    <string name="select_a_category_to_start">Select a category to Start</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="capitals">Capitals</string>
    <string name="area">Area</string>
    <string name="literacy_rate1">Literacy Rate</string>
    <string name="area_fire">area</string>
    <string name="population_fire">population</string>
    <string name="generalKnowledge_fire">generalKnowledge</string>
    <string name="capitals_fire">capitals</string>
    <string name="literacy_fire">literacyRate</string>
    <string name="sexRatio_fire">sexRatio</string>
    <string name="score">Score:</string>
    <string name="try_again">Try Again</string>
    <string name="dzone_Intro">We The D-Zone Team believes in providing opportunities to the potential students and creating a healthy,social and patriotic atmosphere . We aim at the simplicity in an highly orgainzed way to provide our users with the Quality Material on different topics of real concern.</string>
    <string name="contibutors">The contributers to this app are:</string>
    <string name="our_mission">OUR MISSION</string>
    <string name="your_highest_score_is">Your Highest Score is</string>
    <string name="your_score">Your Score</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="reset_the_score">Reset the Score</string>
    <string name="_1_10">1/10</string>
    <string name="_10">10</string>
    <string name="score_0">Score: 0</string>
    <string name="question_goes_here_like_what_is_the_capital_of_jharkhand">Question goes here like what is the capital of Jharkhand?</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="register_to_explore_indian_states_and_the_union_territories">REGISTER TO EXPLORE INDIAN STATES AND THE UNION TERRITORIES</string>
    <string name="settings">Settings</string>
</resources>