<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us_24dp"
            android:title="@string/about_us"
            />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_24dp"
            android:title="@string/share"
            />
        <item
            android:id="@+id/nav_contact_use"
            android:icon="@drawable/ic_email_24dp"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>

    </group>
</menu>