<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/quiz_cardview"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/blueDark"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/quiz_logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/app_icon"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/logo_main" />

            <TextView
                android:id="@+id/question_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/quiz_logo"
                android:layout_alignParentTop="true"
                android:text="@string/_1_10"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_toRightOf="@+id/quiz_logo"
                android:layout_marginStart="16dp" />

            <RelativeLayout
                android:id="@+id/score_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <ProgressBar
                    android:id="@+id/quiz_progress_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="10"/>

                <TextView
                    android:id="@+id/quiz_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/_10"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_0"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="8dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="8dp" />
            <LinearLayout
                android:layout_below="@+id/score_container"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/question"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/choiceA"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/background_white_border"/>
                <Button
                    android:id="@+id/choiceB"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/background_white_border"/>
                <Button
                    android:id="@+id/choiceC"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/background_white_border"/>
                <Button
                    android:id="@+id/choiceD"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/background_white_border"/>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>